@@ -1,3 +1,10 @@
+2005-03-24  Alex Roitman  <shura@gramps-project.org>
+	* src/RelLib.py (Witness.__init__): Typo.
+	* src/plugins/Check.py (cleanup_missing_photos): Use new mediaref
+	detection/removal, icons, window management.
+	* src/plugins/summary.glade: non-modal dialog.
+	* src/plugins/Verify.py (VerifyResults): Use title once.
+
 2005-03-24  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/DdTargets.py: new module to manage drag and drop target data.
 	* src/Makefile.am: added DdTargets.py
